include/sick_scan_xd_api/sick_scan_api.h


typedef struct SickScanHeaderType 
{
  uint32_t seq;            
  uint32_t timestamp_sec;  
  uint32_t timestamp_nsec; 
  char frame_id[256];      
} SickScanHeader;
typedef struct SickScanUint8ArrayType 
{
  uint64_t capacity; 
  uint64_t size;     
  uint8_t* buffer;   
} SickScanUint8Array;
typedef struct SickScanPointFieldArrayType 
{
  uint64_t capacity; 
  uint64_t size;     
  SickScanPointFieldMsg* buffer;  
} SickScanPointFieldArray;
typedef struct SickScanPointCloudMsgType 
{
  SickScanHeader header;          
  uint32_t height;                
  uint32_t width;                 
  SickScanPointFieldArray fields; 
  uint8_t   is_bigendian;         
  uint32_t  point_step;           
  uint32_t  row_step;             
  SickScanUint8Array data;        
  uint8_t is_dense;               
  int32_t num_echos;              
  int32_t segment_idx;            
} SickScanPointCloudMsg;
typedef struct SickScanVector3MsgType 
{
  double x;
  double y;
  double z;
} SickScanVector3Msg;
typedef struct SickScanQuaternionMsgType 
{
  double x;
  double y;
  double z;
  double w;
} SickScanQuaternionMsg;
typedef struct SickScanImuMsgType 
{
  SickScanHeader header;                       
  SickScanQuaternionMsg orientation;
  double orientation_covariance[9];            
  SickScanVector3Msg angular_velocity;
  double angular_velocity_covariance[9];       
  SickScanVector3Msg linear_acceleration;
  double linear_acceleration_covariance[9];    
  uint32_t ticks;                              
  float quaternion_accuracy;                   
  uint8_t angular_velocity_reliability;        
  uint8_t linear_acceleration_reliability;     
} SickScanImuMsg;
typedef struct SickScanLFErecFieldMsgType 
{
  uint16_t version_number;
  uint8_t field_index;
  uint32_t sys_count;
  float dist_scale_factor;
  float dist_scale_offset;
  uint32_t angle_scale_factor;
  int32_t angle_scale_offset;
  uint8_t field_result_mrs;     
  uint16_t time_state;          
  uint16_t year;                
  uint8_t month;                
  uint8_t day;                  
  uint8_t hour;                 
  uint8_t minute;               
  uint8_t second;               
  uint32_t microsecond;         
} SickScanLFErecFieldMsg;
typedef struct SickScanLFErecMsgType 
{
  SickScanHeader header;             
  uint16_t fields_number;            
  SickScanLFErecFieldMsg fields[3];  
} SickScanLFErecMsg;
typedef struct SickScanLIDoutputstateMsgType 
{
  SickScanHeader header;        
  uint16_t version_number;      
  uint32_t system_counter;      
  uint8_t output_state[8];      
  uint32_t output_count[8];     
  uint16_t time_state;          
  uint16_t year;                
  uint8_t month;                
  uint8_t day;                  
  uint8_t hour;                 
  uint8_t minute;               
  uint8_t second;               
  uint32_t microsecond;         
} SickScanLIDoutputstateMsg;
typedef struct SickScanRadarPreHeaderType 
{
  uint16_t uiversionno;             
  uint32_t uiident;                 
  uint32_t udiserialno;             
  uint8_t bdeviceerror;             
  uint8_t bcontaminationwarning;    
  uint8_t bcontaminationerror;      
  uint32_t uitelegramcount;         
  uint32_t uicyclecount;            
  uint32_t udisystemcountscan;      
  uint32_t udisystemcounttransmit;  
  uint16_t uiinputs;                
  uint16_t uioutputs;               
  uint32_t uicycleduration;         
  uint32_t uinoiselevel;            
  uint16_t numencoder;              
  uint32_t udiencoderpos[3];        
  int16_t iencoderspeed[3];         
} SickScanRadarPreHeader;
typedef struct SickScanRadarObjectArrayType 
{
  uint64_t capacity; 
  uint64_t size;     
  SickScanRadarObject* buffer;  
} SickScanRadarObjectArray;
typedef struct SickScanRadarScanType 
{
  SickScanHeader header;                 
  SickScanRadarPreHeader radarpreheader; 
  SickScanPointCloudMsg targets;         
  SickScanRadarObjectArray objects;      
} SickScanRadarScan;
typedef struct SickScanLdmrsObjectBufferType 
{
  uint64_t capacity; 
  uint64_t size;     
  SickScanLdmrsObject* buffer;  
} SickScanLdmrsObjectBuffer;
typedef struct SickScanLdmrsObjectArrayType 
{
  SickScanHeader header;                 
  SickScanLdmrsObjectBuffer objects;     
} SickScanLdmrsObjectArray;
typedef void* SickScanApiHandle;
typedef void(* SickScanPointCloudMsgCallback)(SickScanApiHandle apiHandle, const SickScanPointCloudMsg* msg);
typedef void(* SickScanImuMsgCallback)(SickScanApiHandle apiHandle, const SickScanImuMsg* msg);
typedef void(* SickScanLFErecMsgCallback)(SickScanApiHandle apiHandle, const SickScanLFErecMsg* msg);
typedef void(* SickScanLIDoutputstateMsgCallback)(SickScanApiHandle apiHandle, const SickScanLIDoutputstateMsg* msg);
typedef void(* SickScanRadarScanCallback)(SickScanApiHandle apiHandle, const SickScanRadarScan* msg);
typedef void(* SickScanLdmrsObjectArrayCallback)(SickScanApiHandle apiHandle, const SickScanLdmrsObjectArray* msg);
int32_t SickScanApiLoadLibrary(const char* library_filepath);
SickScanApiHandle SickScanApiCreate(int argc, char** argv);
int32_t SickScanApiRelease(SickScanApiHandle apiHandle);
int32_t SickScanApiInitByLaunchfile(SickScanApiHandle apiHandle, const char* launchfile_args);
int32_t SickScanApiInitByCli(SickScanApiHandle apiHandle, int argc, char** argv);
int32_t SickScanApiClose(SickScanApiHandle apiHandle);
int32_t SickScanApiRegisterCartesianPointCloudMsg(SickScanApiHandle apiHandle, SickScanPointCloudMsgCallback callback);
int32_t SickScanApiDeregisterCartesianPointCloudMsg(SickScanApiHandle apiHandle, SickScanPointCloudMsgCallback callback);
int32_t SickScanApiRegisterPolarPointCloudMsg(SickScanApiHandle apiHandle, SickScanPointCloudMsgCallback callback);
int32_t SickScanApiDeregisterPolarPointCloudMsg(SickScanApiHandle apiHandle, SickScanPointCloudMsgCallback callback);
int32_t SickScanApiRegisterImuMsg(SickScanApiHandle apiHandle, SickScanImuMsgCallback callback);
int32_t SickScanApiDeregisterImuMsg(SickScanApiHandle apiHandle, SickScanImuMsgCallback callback);
int32_t SickScanApiRegisterLFErecMsg(SickScanApiHandle apiHandle, SickScanLFErecMsgCallback callback);
int32_t SickScanApiDeregisterLFErecMsg(SickScanApiHandle apiHandle, SickScanLFErecMsgCallback callback);
int32_t SickScanApiRegisterLIDoutputstateMsg(SickScanApiHandle apiHandle, SickScanLIDoutputstateMsgCallback callback);
int32_t SickScanApiDeregisterLIDoutputstateMsg(SickScanApiHandle apiHandle, SickScanLIDoutputstateMsgCallback callback);
int32_t SickScanApiRegisterRadarScanMsg(SickScanApiHandle apiHandle, SickScanRadarScanCallback callback);
int32_t SickScanApiDeregisterRadarScanMsg(SickScanApiHandle apiHandle, SickScanRadarScanCallback callback);
int32_t SickScanApiRegisterLdmrsObjectArrayMsg(SickScanApiHandle apiHandle, SickScanLdmrsObjectArrayCallback callback);
int32_t SickScanApiDeregisterLdmrsObjectArrayMsg(SickScanApiHandle apiHandle, SickScanLdmrsObjectArrayCallback callback);
int32_t SickScanApiWaitNextCartesianPointCloudMsg(SickScanApiHandle apiHandle, SickScanPointCloudMsg* msg, double timeout_sec);
int32_t SickScanApiWaitNextPolarPointCloudMsg(SickScanApiHandle apiHandle, SickScanPointCloudMsg* msg, double timeout_sec);
int32_t SickScanApiFreePolarPointCloudMsg(SickScanApiHandle apiHandle, SickScanPointCloudMsg* msg);
int32_t SickScanApiWaitNextImuMsg(SickScanApiHandle apiHandle, SickScanImuMsg* msg, double timeout_sec);
int32_t SickScanApiFreeImuMsg(SickScanApiHandle apiHandle, SickScanImuMsg* msg);
int32_t SickScanApiWaitNextLFErecMsg(SickScanApiHandle apiHandle, SickScanLFErecMsg* msg, double timeout_sec);
int32_t SickScanApiFreeLFErecMsg(SickScanApiHandle apiHandle, SickScanLFErecMsg* msg);
int32_t SickScanApiWaitNextLIDoutputstateMsg(SickScanApiHandle apiHandle, SickScanLIDoutputstateMsg* msg, double timeout_sec);
int32_t SickScanApiFreeLIDoutputstateMsg(SickScanApiHandle apiHandle, SickScanLIDoutputstateMsg* msg);
int32_t SickScanApiWaitNextRadarScanMsg(SickScanApiHandle apiHandle, SickScanRadarScan* msg, double timeout_sec);
int32_t SickScanApiFreeRadarScanMsg(SickScanApiHandle apiHandle, SickScanRadarScan* msg);
int32_t SickScanApiWaitNextLdmrsObjectArrayMsg(SickScanApiHandle apiHandle, SickScanLdmrsObjectArray* msg, double timeout_sec);
int32_t SickScanApiFreeLdmrsObjectArrayMsg(SickScanApiHandle apiHandle, SickScanLdmrsObjectArray* msg);